added pulumi org to chui config

--- a/chui-app.sample.yaml
+++ b/chui-app.sample.yaml
@@ -3,3 +3,4 @@ source: git@github.com:chuistack/chui-storage-minio.git
 type: storage
 variant: minio
 name: {{globalAppName}}-{{application}}
+pulumiOrgName: {{pulumiOrgName}}
