updated chui-app.yaml with new standard

--- a/chui-app.sample.yaml
+++ b/chui-app.sample.yaml
@@ -2,5 +2,6 @@ version: 0.1.0
 source: git@github.com:chuistack/chui-storage-minio.git
 type: storage
 variant: minio
-name: {{globalAppName}}-{{application}}
+name: {{application}}
+globalAppName: {{globalAppName}}
 pulumiOrgName: {{pulumiOrgName}}
